--- a/pipeline_config.json
+++ b/pipeline_config.json
@@ -26,7 +26,8 @@
       "TokenFileURL": "gs://avf-credentials/csap-secondary-text-it-token.txt",
       "ContactsFileName": "csap_secondary_contacts",
       "ActivationFlowNames": [
-        "csap_s06e01_activation"
+        "csap_s06e01_activation",
+        "csap_s06e02_activation"
       ],
       "SurveyFlowNames": [
         "csap_s04_demog",
